2020_12_02_ncs_update_project

--- a/Toy-client/src/app/am/categories/category/category-business/category-business.component.html
+++ b/Toy-client/src/app/am/categories/category/category-business/category-business.component.html
@@ -6,12 +6,12 @@
             <div class="portlet-title">
                 <div class="caption" *ngIf="isUpdate===true">
                     <i class="fa fa-globe"></i>{{ 'SIDEBAR.Directory' | translate }} >
-                    {{ 'SIDEBAR.Classroom' | translate }} > {{ 'Common.Update'
+                    {{ 'SIDEBAR.Category' | translate }} > {{ 'Common.Update'
                     | translate }}
                 </div>
                 <div class="caption" *ngIf="isUpdate===false">
                     <i class="fa fa-globe"></i>{{ 'SIDEBAR.Directory' | translate }} >
-                    {{ 'SIDEBAR.Classroom' | translate }} > {{ 'Common.Create'
+                    {{ 'SIDEBAR.Category' | translate }} > {{ 'Common.Create'
                     | translate }}
                 </div>
             </div>
