--- a/Toy-client/src/app/am/categories/category/category-detail/category-detail.component.html
+++ b/Toy-client/src/app/am/categories/category/category-detail/category-detail.component.html
@@ -4,7 +4,7 @@
             <div class="portlet-title">
                 <div class="caption">
                     <i class="fa fa-globe"></i>{{ 'SIDEBAR.Directory' | translate }} >
-                    {{ 'SIDEBAR.Classroom' | translate }} > {{ 'Common.Detail'
+                    {{ 'SIDEBAR.Category' | translate }} > {{ 'Common.Detail'
                     | translate }}
                 </div>
             </div>
@@ -16,7 +16,7 @@
                                 <div class="col-md-8">
                                     <div class="form-group">
                                         <label
-                                            class="col-md-4 text-right">{{'Classroom.Name'|translate}}:</label>
+                                            class="col-md-4 text-right">{{'Category.Name'|translate}}:</label>
                                         <div class="col-md-8">{{classroom?.nameClassroom}}</div>
                                     </div>
                                     <div class="form-group">
