--- a/Toy-client/src/app/am/categories/category/category-list.component.html
+++ b/Toy-client/src/app/am/categories/category/category-list.component.html
@@ -25,19 +25,19 @@
                   <div class="row">
                     <div class="col-md-4">
                       <div class="form-group">
-                        <label class="control-label col-md-4" for="nameClassroom">{{ 'Classroom.Name' | translate }}</label>
+                        <label class="control-label col-md-4" for="nameClassroom">{{ 'Category.Name' | translate }}</label>
                         <div class="col-md-8">
-                          <input id="nameClassroom" type="text" class="form-control" placeholder="{{ 'Classroom.Name' | translate }}" formControlName="nameClassroom">
+                          <input id="nameClassroom" type="text" class="form-control" placeholder="{{ 'Category.Name' | translate }}" formControlName="nameClassroom">
                         </div>
                       </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label class="control-label col-md-4" for="amount">{{ 'Classroom.Amount'
+                            <label class="control-label col-md-4" for="amount">{{ 'Category.Amount'
                                 | translate }}</label>
                             <div class="col-md-8">
                                 <input id="amount" ng-trim="true" type="text" class="form-control"
-                                    placeholder="{{ 'Classroom.Amount' | translate }}"
+                                    placeholder="{{ 'Category.Amount' | translate }}"
                                     formControlName="amount">
                             </div>
                         </div>
@@ -45,29 +45,29 @@
 
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label class="control-label col-md-4" for="symbol">{{ 'Classroom.Symbol'
+                            <label class="control-label col-md-4" for="symbol">{{ 'Category.Symbol'
                                 | translate }}</label>
                             <div class="col-md-8">
                                 <input id="symbol" ng-trim="true" type="text" class="form-control"
-                                    placeholder="{{ 'Classroom.Symbol' | translate }}"
+                                    placeholder="{{ 'Category.Symbol' | translate }}"
                                     formControlName="symbol">
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label class="control-label col-md-4" for="chucNang">{{ 'Classroom.Functions'
+                            <label class="control-label col-md-4" for="chucNang">{{ 'Category.Functions'
                                 | translate }}</label>
                             <div class="col-md-8">
                                 <input id="chucNang" ng-trim="true" type="text" class="form-control"
-                                    placeholder="{{ 'Classroom.Functions' | translate }}"
+                                    placeholder="{{ 'Category.Functions' | translate }}"
                                     formControlName="chucNang">
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                       <div class="form-group">
-                        <label class="control-label col-md-4" for="statuss">{{'Classroom.Status'|translate}}</label>
+                        <label class="control-label col-md-4" for="statuss">{{'Category.Status'|translate}}</label>
                         <div class="col-md-8">
                           <select id="statuss" class="form-control" formControlName="statuss" autofocus>
                             <option value="">{{ 'Common.All' | translate }}</option>
@@ -97,28 +97,28 @@
                   </div>
                 </th>
                 <th>
-                  <mfDefaultSorter by="nameClassroom">{{ 'Classroom.Name' | translate }}</mfDefaultSorter>
+                  <mfDefaultSorter by="nameClassroom">{{ 'Category.Name' | translate }}</mfDefaultSorter>
                 </th>
                 <th>
-                  <mfDefaultSorter by="codeClassroom">{{ 'Classroom.Amphitheater' | translate }}</mfDefaultSorter>
+                  <mfDefaultSorter by="codeClassroom">{{ 'Category.Amphitheater' | translate }}</mfDefaultSorter>
                 </th>
                 <th>
-                  <mfDefaultSorter by="createdBy">{{ 'Classroom.Symbol' | translate }}</mfDefaultSorter>
+                  <mfDefaultSorter by="createdBy">{{ 'Category.Symbol' | translate }}</mfDefaultSorter>
                 </th>
                 <th>
-                    <mfDefaultSorter by="createdBy">{{ 'Classroom.Functions' | translate }}</mfDefaultSorter>
+                    <mfDefaultSorter by="createdBy">{{ 'Category.Functions' | translate }}</mfDefaultSorter>
                 </th>
                 <th>
-                    <mfDefaultSorter by="amount">{{ 'Classroom.Amount' | translate }}</mfDefaultSorter>
+                    <mfDefaultSorter by="amount">{{ 'Category.Amount' | translate }}</mfDefaultSorter>
                 </th>
                 <th>
-                    <mfDefaultSorter by="createdBy">{{ 'Classroom.CreatedBy' | translate }}</mfDefaultSorter>
+                    <mfDefaultSorter by="createdBy">{{ 'Category.CreatedBy' | translate }}</mfDefaultSorter>
                   </th>
                 <th>
-                  <mfDefaultSorter by="createTime">{{ 'Classroom.CreateTime' | translate }}</mfDefaultSorter>
+                  <mfDefaultSorter by="createTime">{{ 'Category.CreateTime' | translate }}</mfDefaultSorter>
                 </th>
                 <th>
-                  <mfDefaultSorter by="statuss">{{'Classroom.Status'|translate}}</mfDefaultSorter>
+                  <mfDefaultSorter by="statuss">{{'Category.Status'|translate}}</mfDefaultSorter>
                 </th>
                 <th><a>{{ 'Common.Action' | translate }}</a></th>
               </tr>
