--- a/Toy-client/src/app/am/common/shared/sidebar/sidebar.component.html
+++ b/Toy-client/src/app/am/common/shared/sidebar/sidebar.component.html
@@ -22,12 +22,12 @@
 						{{ 'Product.Title' | translate }}</a>
 				</li>
 				<li class="nav-item" routerLinkActive="active">
-					<a routerLink="/classroom">
+					<a routerLink="/category">
 						<i class="fa fa-angle-right" aria-hidden="true"></i>
 						{{ 'Account.Title' | translate }}</a>
 				</li>
 				<li class="nav-item" routerLinkActive="active">
-					<a routerLink="/device">
+					<a routerLink="/manufacturer">
 						<i class="fa fa-angle-right" aria-hidden="true"></i>
 						{{ 'ShoppingCart.Title' | translate }}</a>
 				</li>
