--- a/Toy-client/src/app/am/categories/manufacturer/manufacturer-detail/manufacturer-detail.component.html
+++ b/Toy-client/src/app/am/categories/manufacturer/manufacturer-detail/manufacturer-detail.component.html
@@ -17,41 +17,41 @@
                                     <div class="form-group">
                                         <label
                                             class="col-md-4 text-right">{{'Device.Name'|translate}}</label>
-                                        <div class="col-md-8">{{device?.nameDevice}}</div>
+                                        <div class="col-md-8">{{manufacturer?.nameDevice}}</div>
                                     </div>
                                     <div class="form-group">
                                         <label
                                             class="col-md-4 text-right">{{'Device.Classroom'|translate}}</label>
-                                        <div class="col-md-8">{{device?.classroom.nameClassroom}}</div>
+                                        <div class="col-md-8">{{manufacturer?.classroom.nameClassroom}}</div>
                                     </div>
                                     <div class="form-group">
                                         <label
                                             class="col-md-4 text-right">{{'Device.Amount'|translate}}</label>
-                                        <div class="col-md-8">{{device?.amount}}</div>
+                                        <div class="col-md-8">{{manufacturer?.amount}}</div>
                                     </div>
                                     <div class="form-group">
                                         <label
                                             class="col-md-4 text-right">{{'Device.CreateTime'|translate}}</label>
-                                        <div class="col-md-8">{{device?.createTime |  date: 'dd/MM/yyyy'}}</div>
+                                        <div class="col-md-8">{{manufacturer?.createTime |  date: 'dd/MM/yyyy'}}</div>
                                     </div>
                                     <div class="form-group">
                                         <label
                                             class="col-md-4 text-right">{{'Device.CreatedBy'|translate}}</label>
-                                        <div class="col-md-8">{{device?.createdBy}}</div>
+                                        <div class="col-md-8">{{manufacturer?.createdBy}}</div>
                                     </div>
                                     <div class="form-group">
                                         <label
                                             class="col-md-4 text-right">{{'Device.UpdateTime'|translate}}</label>
-                                        <div class="col-md-8">{{device?.updateTime |  date: 'dd/MM/yyyy'}}</div>
+                                        <div class="col-md-8">{{manufacturer?.updateTime |  date: 'dd/MM/yyyy'}}</div>
                                     </div>
                                     <div class="form-group">
                                         <label
                                             class="col-md-4 text-right">{{'Device.UpdatedBy'|translate}}</label>
-                                        <div class="col-md-8">{{device?.updatedBy}}</div>
+                                        <div class="col-md-8">{{manufacturer?.updatedBy}}</div>
                                     </div>
                                     <div class="form-group">
                                         <label class="col-md-4 text-right">{{'Device.Status'|translate}}</label>
-                                        <div class="col-md-8">{{device?.statuss==1?'Active':'Inactive'}}</div>
+                                        <div class="col-md-8">{{manufacturer?.statuss==1?'Active':'Inactive'}}</div>
                                     </div>
                                 </div>
                             </div>
