--- a/Toy-client/src/app/am/categories/manufacturer/manufacturer-list.component.html
+++ b/Toy-client/src/app/am/categories/manufacturer/manufacturer-list.component.html
@@ -25,15 +25,15 @@
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group">
-                        <label class="control-label col-md-4" for="nameDevice">{{ 'Device.Name' | translate }}</label>
+                        <label class="control-label col-md-4" for="name">{{ 'Device.Name' | translate }}</label>
                         <div class="col-md-8">
-                          <input id="nameDevice" type="text" class="form-control" placeholder="{{ 'Device.Name' | translate }}" formControlName="nameDevice">
+                          <input id="name" type="text" class="form-control" placeholder="{{ 'Device.Name' | translate }}" formControlName="name">
                         </div>
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="form-group">
-                        <label class="control-label col-md-4" for="statuss">{{'Device.Status'|translate}}</label>
+                        <label class="control-label col-md-4" for="name">{{'Device.Status'|translate}}</label>
                         <div class="col-md-8">
                           <select id="statuss" class="form-control" formControlName="statuss" autofocus>
                             <option value="">{{ 'Common.All' | translate }}</option>
