--- a/Home-Client/src/app/homepage/homepage.component.html
+++ b/Home-Client/src/app/homepage/homepage.component.html
@@ -65,7 +65,8 @@
         <div class="product-slider owl-carousel ftco-animate">
           <div class="item">
             <div class="product">
-              <a href="#" class="img-prod"><img class="img-fluid" src='../../../assets/homecss/images/5.jpg'
+              
+              <!-- <a href="#" class="img-prod"><img class="img-fluid" src='../../../assets/homecss/images/5.jpg'
                   alt="Colorlib Template">
                 <span class="status">30%</span>
               </a>
@@ -87,7 +88,7 @@
                     </p>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="item">
