--- a/Toy-client/src/app/am/categories/product/product-business/product-business.component.html
+++ b/Toy-client/src/app/am/categories/product/product-business/product-business.component.html
@@ -28,36 +28,36 @@
                                             formControlName="idProduct" />
                                         <div class="form-group">
                                             <label class="control-label col-md-4"
-                                                for="nameProduct">{{ 'Product.Name' | translate }}
+                                                for="name">{{ 'Product.Name' | translate }}
                                                 <span style="color:red;"> *</span>
                                             </label>
                                             <div class="col-md-8">
-                                                <input id="nameProduct" autocomplete="off" type="text"
-                                                    class="form-control" formControlName="nameProduct"
+                                                <input id="name" autocomplete="off" type="text"
+                                                    class="form-control" formControlName="name"
                                                     placeholder="{{ 'Product.Name' | translate }}" />
                                                 <!-- <div class="col-md-8">{{amphitheater?.nameAmphitheater}}</div> -->
                                                 <small class="error"
-                                                    *ngIf="ProductForm.get('nameProduct').invalid && (ProductForm.get('nameProduct').touched)">
-                                                    <span *ngIf="ProductForm.get('nameProduct').errors.required">
+                                                    *ngIf="ProductForm.get('name').invalid && (ProductForm.get('name').touched)">
+                                                    <span *ngIf="ProductForm.get('name').errors.required">
                                                         {{ 'Message.Required' | translate }}
                                                     </span>
                                                     <span
-                                                        *ngIf="isUpdate===false && !ProductForm.get('nameProduct').errors.required&&ProductForm.get('nameProduct').errors.pattern!=null">
+                                                        *ngIf="isUpdate===false && !ProductForm.get('name').errors.required&&ProductForm.get('name').errors.pattern!=null">
                                                         {{ 'Message.CodeInvalid' | translate }}
                                                     </span>
                                                     <span
-                                                        *ngIf="!ProductForm.get('nameProduct').errors.required&&ProductForm.get('nameProduct').errors.maxlength!=null">
+                                                        *ngIf="!ProductForm.get('name').errors.required&&ProductForm.get('name').errors.maxlength!=null">
                                                         {{ 'Message.MaxLength' | translate }} 50
                                                     </span>
                                                 </small>
                                                 <small class="error"
-                                                    *ngIf="!ProductForm.get('nameProduct').invalid && (ProductForm.get('nameProduct').touched)">
+                                                    *ngIf="!ProductForm.get('name').invalid && (ProductForm.get('name').touched)">
                                                     <span
-                                                        *ngIf="ProductForm.get('nameProduct').value.trim() == ''">
+                                                        *ngIf="ProductForm.get('name').value.trim() == ''">
                                                         {{ 'Message.CodeInvalid' | translate }}
                                                     </span>
                                                     <span
-                                                        *ngIf="isUpdate===true && !isEqualOld(ProductForm.get('nameProduct').value, 'code')">
+                                                        *ngIf="isUpdate===true && !isEqualOld(ProductForm.get('name').value, 'code')">
                                                         {{ 'Message.Same' | translate }}
                                                     </span>
                                                 </small>
@@ -66,20 +66,20 @@
                                     </div>
     
                                     <small class="error"
-                                        *ngIf="ProductForm.get('nameProduct').invalid && (ProductForm.get('nameProduct').touched)">
+                                        *ngIf="ProductForm.get('name').invalid && (ProductForm.get('name').touched)">
                                         <span
-                                            *ngIf="ProductForm.get('nameProduct').errors.required||ProductForm.get('nameProduct').errors.pattern!=null">
+                                            *ngIf="ProductForm.get('name').errors.required||ProductForm.get('name').errors.pattern!=null">
                                             {{ 'Message.Required' | translate }}
                                         </span>
                                         <span
-                                            *ngIf="!ProductForm.get('nameProduct').errors.required&&ProductForm.get('nameProduct').errors.maxlength!=null">
+                                            *ngIf="!ProductForm.get('name').errors.required&&ProductForm.get('name').errors.maxlength!=null">
                                             {{ 'Message.MaxLength' | translate }} 50
                                         </span>
                                     </small>
                                     <small class="error"
-                                        *ngIf="!ProductForm.get('nameProduct').invalid && (ProductForm.get('nameProduct').touched)">
+                                        *ngIf="!ProductForm.get('name').invalid && (ProductForm.get('name').touched)">
                                         <span
-                                            *ngIf="isUpdate===true && !isEqualOld(ProductForm.get('nameProduct').value, 'name')">
+                                            *ngIf="isUpdate===true && !isEqualOld(ProductForm.get('name').value, 'name')">
                                             {{ 'Message.Same' | translate }}
                                         </span>
                                     </small>
@@ -92,14 +92,14 @@
                                                     <span style="color:red;"> *</span>
                                                 </label>
                                                 <div class="col-md-8">
-                                                    <ng-select id="category"
+                                                    <ng-select id="categoryId"
                                                         [active]="indexCategorySelection!=null?[categorySelections[indexCategorySelection]]:''"
                                                         [allowClear]="true" [items]="categorySelections"
                                                         (selected)="categoryChanged($event?.id)" (removed)="categoryChanged(0)"
                                                         placeholder="{{ 'Category.ChooseCategory' | translate }}" ngDefaultControl>
                                                     </ng-select>
                                                     <small class="error" *ngIf="(ProductForm.get('category').touched)">
-                                                        <span *ngIf="!ProductForm.get('category.id').value">
+                                                        <span *ngIf="!ProductForm.get('categoryId').value">
                                                             {{ 'Message.Required' | translate }}
                                                         </span>
                     
@@ -109,17 +109,79 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label class="control-label col-md-4" for="amountProduct">{{ 'Product.Amount' | translate }}
+                                                <label class="control-label col-md-4"
+                                                    for="manfacture">{{ 'Product.Manufacturer' | translate }}
+                                                    <span style="color:red;"> *</span>
+                                                </label>
+                                                <div class="col-md-8">
+                                                    <ng-select id="manfacturerId"
+                                                        [active]="indexManufactererSelection!=null?[manufacturerSelections[indexManufactererSelection]]:''"
+                                                        [allowClear]="true" [items]="manufacturerSelections"
+                                                        (selected)="manfacturerChanged($event?.id)" (removed)="manfacturerChanged(0)"
+                                                        placeholder="{{ 'Manufacturer.Chooseman' | translate }}" ngDefaultControl>
+                                                    </ng-select>
+                                                    <small class="error" *ngIf="(ProductForm.get('manfacture').touched)">
+                                                        <span *ngIf="!ProductForm.get('manfacturerId').value">
+                                                            {{ 'Message.Required' | translate }}
+                                                        </span>
+                    
+                                                    </small>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label class="control-label col-md-4" for="description">{{ 'Product.Description' | translate }}
                                                     <span style="color:red;"> *</span>
                                                 </label>
                                                 <div class="col-md-8">
                                                     <input id="name" autocomplete="off" type="text" class="form-control"
-                                                        formControlName="amountProduct" placeholder="{{ 'Product.EnterAmount' | translate }}"
+                                                        formControlName="description" placeholder="{{ 'Product.EnterDescription' | translate }}"
                                                      />
-                                                    <small class="error"
+                                                    <!-- <small class="error"
                                                         *ngIf="ProductForm.get('amountProduct').invalid && (ProductForm.get('amountProduct').touched)">
                                                         <span
                                                             *ngIf="ProductForm.get('amountProduct').errors.required||ProductForm.get('amountProduct').errors.pattern!=null">
+                                                            {{ 'Message.Required' | translate }}
+                                                        </span>
+                    
+                                                    </small> -->
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label class="control-label col-md-4" for="price">{{ 'Product.Price' | translate }}
+                                                    <span style="color:red;"> *</span>
+                                                </label>
+                                                <div class="col-md-8">
+                                                    <input id="name" autocomplete="off" type="text" class="form-control"
+                                                        formControlName="price" placeholder="{{ 'Product.EnterPrice' | translate }}"
+                                                     />
+                                                    <small class="error"
+                                                        *ngIf="ProductForm.get('price').invalid && (ProductForm.get('price').touched)">
+                                                        <span
+                                                            *ngIf="ProductForm.get('price').errors.required||ProductForm.get('price').errors.pattern!=null">
+                                                            {{ 'Message.Required' | translate }}
+                                                        </span>
+                    
+                                                    </small>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label class="control-label col-md-4" for="amount">{{ 'Product.Amount' | translate }}
+                                                    <span style="color:red;"> *</span>
+                                                </label>
+                                                <div class="col-md-8">
+                                                    <input id="name" autocomplete="off" type="text" class="form-control"
+                                                        formControlName="amount" placeholder="{{ 'Product.EnterAmount' | translate }}"
+                                                     />
+                                                    <small class="error"
+                                                        *ngIf="ProductForm.get('amount').invalid && (ProductForm.get('amount').touched)">
+                                                        <span
+                                                            *ngIf="ProductForm.get('amount').errors.required||ProductForm.get('amount').errors.pattern!=null">
                                                             {{ 'Message.Required' | translate }}
                                                         </span>
                     
