--- a/Home-Client/src/assets/homecss/css/style.css
+++ b/Home-Client/src/assets/homecss/css/style.css
@@ -7416,7 +7416,7 @@ h1, h2, h3, h4, h5,
       top: 0;
       padding: 10px 15px; } }
   .ftco-navbar-light.ftco-navbar-light-2 {
-    position: relative;
+    position: absolute;
     top: 0; }
   .ftco-navbar-light .navbar-brand {
     color: #000000; }
